--- a/Lesson_5(Function)/index.html
+++ b/Lesson_5(Function)/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <script src="./JS/script.js"></script>
+    <script src="./JS/script_func.js"></script>
   </body>
 </html>
